# DARWIN

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  project_structure.txt  pyproject.toml  requirements.txt
.github/workflows/: DARWIN_ci.yml
DARWIN/: __init__.py
DARWIN/clock/: __init__.py  clock.py
DARWIN/inference/: __init__.py  anthropic_backend.py  deepseek_backend.py  inference_manager.py  inference_thread.py
DARWIN/social_agent/: __init__.py  agent.py  agent_action.py  agent_environment.py  agent_graph.py  agents_generator.py
DARWIN/social_platform/: __init__.py  channel.py  database.py  platform.py  platform_utils.py  process_recsys_posts.py  recsys.py  typing.py
DARWIN/testing/: show_db.py
data_generators/DARWIN_reddit_generator/: user_generate.py
data_generators/DARWIN_twitter_generator/: ba.py  gen.py  network.py  rag.py
datasets/DARWIN_ecommerce_data/: product.json
logs/: DARWIN_social_twitter-2025-02-09_11-26-09_log  DARWIN_social_twitter-2025-02-09_11-27-52_log
scripts/DARWIN_deployment/: deployment.py
scripts/DARWIN_reddit_basic/: gpt_example.yaml  reddit_simulation_gpt.py
scripts/DARWIN_reddit_counterfactual/: reddit_simulation_counterfactual.py
scripts/DARWIN_reddit_ecommerce/: emall_simulation.py
scripts/DARWIN_reddit_human_aligned/: reddit_simulation_align_with_human.py
scripts/DARWIN_twitter_basic/: twitter_simulation_large.py
scripts/DARWIN_twitter_large_scale/: twitter_simulation_1m.py
test/: conftest.py
test/ social_graph/: test_graph_demo.py
test/agent/: test_action_docstring.py  (+4 more)
(+38 files in other folders)
